--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "codepedia-types",
   "version": "1.0.2",
   "description": "The types to be shared between codepedia and codepedia-api.",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
   "files": [
-    "src",
-    "tsconfig.json"
+    "enums",
+    "interfaces"
   ],
   "scripts": {
     "build": "tsc"
